--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 	display: block;
 	float: left;
 	width: 50%;
-	padding: 0 200px;
+	padding: 0 50px;
 }
 
 .controls fieldset.label {
@@ -49,8 +49,11 @@ body {
 
 
 .slider {
+	display: block;
+	height: 16px;
 	position: relative;
 	border-bottom: 1px solid #252524;
+	cursor: pointer;
 }
 slider + label {
 	display: block;
@@ -62,8 +65,8 @@ slider + label {
 	display: block;
 	position: absolute;
 	z-index: 1;
-	pointer-events: none;
 	bottom: 0px;
+	pointer-events: none;
 }
 .controls label {
 	font-variant: small-caps;
@@ -72,12 +75,12 @@ slider + label {
 
 .slider > value {
 	position: absolute;
-	right: -2px;
+	right: 0;
 	bottom: -1px;
 	border: 1px solid #252524;
-	padding: 0 4px;
+	padding: 0px 4px;
 	font-size: 14px;
-	height: 16px;
+	height: 17px;
 }
 
 .slider > input {
@@ -91,6 +94,7 @@ slider + label {
 	width: 50%;
 	height: 600px;
 	float: left;
+	border-left: 1px solid #EAEAEB;
 }
 
 
